# Claude-Tracker

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  PLAN_pin_button.md  README.md  credentialsreader.cpp  credentialsreader.h  main.cpp  quotapanel.cpp  quotapanel.h  statusled.cpp  statusled.h  toggleswitch.cpp  toggleswitch.h  trayapp.cpp  trayapp.h  usageapiclient.cpp  usageapiclient.h  usagedata.h  usagepopup.cpp  usagepopup.h  usagescanner.cpp  usagescanner.h
